[SOUP] Network Cache: Give more priority to reads over writes in IO WorkQueue https://bugs.webkit.org/show_bug.cgi?id=145791

Reviewed by Sergio Villar Senin.

Keep using G_PRIORITY_DEFAULT for reads, but use
G_PRIORITY_DEFAULT_IDLE for writes now.

* NetworkProcess/cache/NetworkCacheIOChannelSoup.cpp:
(WebKit::NetworkCache::outputStreamWriteReadyCallback): Use
G_PRIORITY_DEFAULT_IDLE for write async operations.
(WebKit::NetworkCache::IOChannel::write): Pass
G_PRIORITY_DEFAULT_IDLE to runTaskInQueue().

Canonical link: https://commits.webkit.org/163842@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@185366 268f45cc-cd09-0410-ab3c-d52691b4dbfc